adding highlight modal

--- a/themes/bix/sass/style.scss
+++ b/themes/bix/sass/style.scss
@@ -75,3 +75,4 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 @import "media-queries";
 @import "front-sections/front-model";
 @import "social-media-modal";
+@import "highlight-modal";
