more-stories page styling

--- a/themes/bix/sass/style.scss
+++ b/themes/bix/sass/style.scss
@@ -70,6 +70,7 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 @import "single-story";
 @import "bix-book";
 @import "stories";
+@import "teaser-stories";
 @import "footer";
 @import "media-queries";
 @import "front-sections/front-model";
