--- a/themes/bix/style.css
+++ b/themes/bix/style.css
@@ -2514,6 +2514,60 @@ strong {
   .stories-main {
     max-width: 70%; } }
 
+.teaser-banner {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-direction: column;
+      flex-direction: column;
+  -ms-flex-pack: center;
+      justify-content: center;
+  -ms-flex-align: center;
+      align-items: center; }
+  .teaser-banner .site-logo, .teaser-banner .teaser-title, .teaser-banner p {
+    display: none; }
+  .teaser-banner .teaser-header {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-direction: column;
+        flex-direction: column;
+    -ms-flex-pack: center;
+        justify-content: center;
+    -ms-flex-align: center;
+        align-items: center; }
+
+.teaser-section1 {
+  max-width: 100%; }
+  .teaser-section1 .more-stories {
+    background: url(../../images/teaser-stories-banner.png) no-repeat center left;
+    background-size: cover;
+    height: 100vh;
+    overflow: hidden;
+    position: relative; }
+
+@media (min-width: 600px) {
+  .teaser-banner {
+    background: url(../../images/teaser-stories-banner.png) no-repeat center left;
+    background-size: cover;
+    height: 70vh;
+    overflow: hidden;
+    position: relative; }
+    .teaser-banner .site-logo, .teaser-banner .teaser-title, .teaser-banner p {
+      display: unset;
+      max-width: 250px; }
+    .teaser-banner .teaser-title {
+      color: #fff;
+      border-bottom: solid 2px #fff;
+      border-top: solid 2px #fff;
+      font-size: 1.5rem;
+      padding: 10px 0;
+      width: 250px;
+      text-transform: capitalize;
+      font-weight: 500;
+      text-align: center; }
+    .teaser-banner p {
+      color: #fff;
+      font-weight: 300; } }
+
 .footer-content-area {
   background-color: #444444;
   max-width: 100%;
