--- a/themes/bix/sass/_teaser-stories.scss
+++ b/themes/bix/sass/_teaser-stories.scss
@@ -16,14 +16,64 @@
 
 .teaser-section1{
 	max-width:100%;
+  margin: 50px 0;
 
 	.more-stories{
-		background: url(../../images/teaser-stories-banner.png) no-repeat center left;
+		background: url(../../images/about-bickson2.png) no-repeat center left;
     background-size: cover;
-    height: 100vh;
+    min-height: 500px;
     overflow: hidden;
-    position: relative; 
-	}
+    position: relative;
+  	div{
+      position: absolute;
+      bottom: 80px;
+      width: 100%;
+      height: 80px;
+      background-color: rgba(255,255,255,.6);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    h2{
+      font-weight: 500;
+      text-transform: uppercase;
+      span{
+        color:#fff;
+      }
+    }
+  }
+  .teaser-content{
+    width: 100%;
+    padding: 0 30px;
+    h2{
+      color: $color__orange;
+      text-align: center;
+      border-bottom: 2px solid $color__orange;
+      border-top: 2px solid $color__orange;
+      font-weight: 500;
+      text-transform: uppercase;
+      font-size: 1.3rem;
+      width: 200px;
+      margin: 0 auto;
+      margin-top: 30px;
+    }
+    p{
+      text-align: center;
+      font-weight: 300;
+      span{
+        font-weight: 500;
+      }
+    }
+    .btn-download{
+      @include btn;
+      padding: 10px 30px;
+      width: 250px;
+      text-transform: uppercase;
+      margin: 0 auto;
+      display:block;
+      text-align: center;
+    }
+  }
 }
 
 
