--- a/themes/bix/style.css
+++ b/themes/bix/style.css
@@ -2536,13 +2536,68 @@ strong {
         align-items: center; }
 
 .teaser-section1 {
-  max-width: 100%; }
+  max-width: 100%;
+  margin: 50px 0; }
   .teaser-section1 .more-stories {
-    background: url(../../images/teaser-stories-banner.png) no-repeat center left;
+    background: url(../../images/about-bickson2.png) no-repeat center left;
     background-size: cover;
-    height: 100vh;
+    min-height: 500px;
     overflow: hidden;
     position: relative; }
+    .teaser-section1 .more-stories div {
+      position: absolute;
+      bottom: 80px;
+      width: 100%;
+      height: 80px;
+      background-color: rgba(255, 255, 255, 0.6);
+      display: -ms-flexbox;
+      display: flex;
+      -ms-flex-pack: center;
+          justify-content: center;
+      -ms-flex-align: center;
+          align-items: center; }
+    .teaser-section1 .more-stories h2 {
+      font-weight: 500;
+      text-transform: uppercase; }
+      .teaser-section1 .more-stories h2 span {
+        color: #fff; }
+  .teaser-section1 .teaser-content {
+    width: 100%;
+    padding: 0 30px; }
+    .teaser-section1 .teaser-content h2 {
+      color: #F9AC31;
+      text-align: center;
+      border-bottom: 2px solid #F9AC31;
+      border-top: 2px solid #F9AC31;
+      font-weight: 500;
+      text-transform: uppercase;
+      font-size: 1.3rem;
+      width: 200px;
+      margin: 0 auto;
+      margin-top: 30px; }
+    .teaser-section1 .teaser-content p {
+      text-align: center;
+      font-weight: 300; }
+      .teaser-section1 .teaser-content p span {
+        font-weight: 500; }
+    .teaser-section1 .teaser-content .btn-download {
+      color: #fff;
+      text-decoration: none;
+      border: solid #fff 2px;
+      border-radius: 30px;
+      background-color: #70b3cb;
+      font-weight: 500;
+      font-size: 1.1rem;
+      padding: 10px 30px;
+      width: 250px;
+      text-transform: uppercase;
+      margin: 0 auto;
+      display: block;
+      text-align: center; }
+      .teaser-section1 .teaser-content .btn-download:hover {
+        color: #70b3cb;
+        border: solid #70b3cb 2px;
+        background-color: #fff; }
 
 @media (min-width: 600px) {
   .teaser-banner {
