--- a/themes/bix/sass/_teaser-stories.scss
+++ b/themes/bix/sass/_teaser-stories.scss
@@ -64,7 +64,7 @@
         font-weight: 500;
       }
     }
-    .btn-download{
+    .btn-download,.btn-expand{
       @include btn;
       padding: 10px 30px;
       width: 250px;
@@ -72,6 +72,26 @@
       margin: 0 auto;
       display:block;
       text-align: center;
+    }
+    .btn-expand{
+      width: 100px;
+      padding: 2px 10px;
+      font-size: 1rem;
+      text-transform: capitalize;
+    }
+    .table-contents-container{
+      border: 1px solid $color__blue;
+      position: relative;
+      div{
+        position: absolute;
+        bottom: 0;
+        width: 100%;
+        height: 50px;
+        background-color: rgba(112,179,203,.9);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
     }
   }
 }
