--- a/themes/bix/sass/_teaser-stories.scss
+++ b/themes/bix/sass/_teaser-stories.scss
@@ -129,3 +129,77 @@
     }
   }
 }
+
+@media #{$tablet-medium}{
+  
+.teaser-section1{
+  max-width:80%;
+  .more-stories{
+    min-height: 550px;
+    div{
+      height: 50px;
+    }
+    h2{
+      font-size: 1.6rem;
+      span{
+        color:$color__orange;
+      }
+    }
+  }
+  .teaser-content{
+    border: 1px solid $color__gray;
+    h2{
+      display: none;
+    }
+    p{
+      font-size: 1.5rem;
+    }
+    .table-contents-container{
+      max-width: 450px;
+      margin: 0 auto;
+      margin-bottom: 50px;
+      div{
+        height: 70px;
+        }
+      }
+    }
+  }
+}
+
+@media #{$desktop}{
+  
+.teaser-section1{
+  max-width:100%;
+  .more-stories{
+    min-height: 550px;
+    div{
+      height: 50px;
+    }
+    h2{
+      font-size: 1.8rem;
+      span{
+        color:$color__orange;
+      }
+    }
+  }
+  .teaser-content{
+    padding: 30px 90px;
+
+    p{
+      font-size: 1.9rem;
+    }
+    .table-contents-container{
+      max-width: 550px;
+      div{
+        height: 100px;
+        }
+      }
+    .btn-expand{
+      width: 250px;
+      padding: 5px 20px;
+      font-size: 1.5rem;
+      } 
+    }
+  }
+}
+
