--- a/themes/bix/style.css
+++ b/themes/bix/style.css
@@ -2677,6 +2677,54 @@ strong {
       color: #fff;
       font-weight: 300; } }
 
+@media (min-width: 700px) {
+  .teaser-section1 {
+    max-width: 80%; }
+    .teaser-section1 .more-stories {
+      min-height: 550px; }
+      .teaser-section1 .more-stories div {
+        height: 50px; }
+      .teaser-section1 .more-stories h2 {
+        font-size: 1.6rem; }
+        .teaser-section1 .more-stories h2 span {
+          color: #F9AC31; }
+    .teaser-section1 .teaser-content {
+      border: 1px solid #444444; }
+      .teaser-section1 .teaser-content h2 {
+        display: none; }
+      .teaser-section1 .teaser-content p {
+        font-size: 1.5rem; }
+      .teaser-section1 .teaser-content .table-contents-container {
+        max-width: 450px;
+        margin: 0 auto;
+        margin-bottom: 50px; }
+        .teaser-section1 .teaser-content .table-contents-container div {
+          height: 70px; } }
+
+@media (min-width: 1024px) {
+  .teaser-section1 {
+    max-width: 100%; }
+    .teaser-section1 .more-stories {
+      min-height: 550px; }
+      .teaser-section1 .more-stories div {
+        height: 50px; }
+      .teaser-section1 .more-stories h2 {
+        font-size: 1.8rem; }
+        .teaser-section1 .more-stories h2 span {
+          color: #F9AC31; }
+    .teaser-section1 .teaser-content {
+      padding: 30px 90px; }
+      .teaser-section1 .teaser-content p {
+        font-size: 1.9rem; }
+      .teaser-section1 .teaser-content .table-contents-container {
+        max-width: 550px; }
+        .teaser-section1 .teaser-content .table-contents-container div {
+          height: 100px; }
+      .teaser-section1 .teaser-content .btn-expand {
+        width: 250px;
+        padding: 5px 20px;
+        font-size: 1.5rem; } }
+
 .footer-content-area {
   background-color: #444444;
   max-width: 100%;
