--- a/themes/bix/sass/_about.scss
+++ b/themes/bix/sass/_about.scss
@@ -34,6 +34,8 @@ h3 {
 
 	.author-section {
 		min-width: 320px;
+		display: block;
+		width: 100%;
 	}
 
 	.author-section-title {
@@ -63,14 +65,11 @@ h3 {
 		p {
 			font-family: $font__header;
 			margin: 1rem 2rem;
-			display: flex;
-			flex-flow: column nowrap;
-			justify-content: center;
-			align-items: center;
 			text-align: center;
-			span:first-child {
-				font-style: italic;
-			}
+			width: 100%;
+		}
+		p:nth-child(2n) {
+			font-style: italic;
 		}
 	}
 
@@ -101,6 +100,9 @@ h3 {
 
 	.company-section {
 		min-width: 320px;
+		display: block;
+		width: 100%;
+		height: 100%;
 	}
 
 	.company-section-title {
@@ -194,6 +196,7 @@ h3 {
 			font-weight: 300;
 		}
 		.website-img-link {
+			height: 100%;
 			max-width: 400px;
 			border: solid 1px $color__blue;
 		}
