--- a/themes/bix/sass/_single-story.scss
+++ b/themes/bix/sass/_single-story.scss
@@ -9,6 +9,8 @@
 
 .single-story-container{
 	min-width: 320px;
+	display: block;
+	width: 100%;
 
 	.entry-header {
 		height: 100vh;
@@ -96,6 +98,10 @@
 				font-weight: 400;
 				color: $color__orange;
 				padding: 0 10vw;
+			}
+			p {
+				display: block;
+				width: 100%;
 			}
 
 			hr {
@@ -226,17 +232,22 @@
 		}
 		.story-content {
 			.top-section-border {
+				display: block;
+				width: 100%;
 				padding: 3rem 4rem;
 				border: 1px solid rgba(0,0,0,0.3);
 				border-top: 0;
 				margin-bottom: 4rem;
 			}
 			.mid-section-border {
+				display: block;
+				width: 100%;
 				padding: 3rem 4rem;
 				border: 1px solid rgba(0,0,0,0.3);
 				margin-bottom: 4rem;
 			}
 			.comment-section-border {
+				display: block;
 				width: 100%;
 				padding: 3rem 4rem;
 				border: 1px solid rgba(0,0,0,0.3);
