--- a/themes/bix/style.css
+++ b/themes/bix/style.css
@@ -3258,3 +3258,9 @@ strong {
   background-color: #ffffff;
   border: solid #70b3cb 2px;
   color: #70b3cb; }
+
+/*--------------------------------------------------------------
+# Highlight and Share Plug In
+--------------------------------------------------------------*/
+.highlight-and-share-wrapper div {
+  padding: 0; }
