--- a/themes/bix/sass/_highlight-modal.scss
+++ b/themes/bix/sass/_highlight-modal.scss
@@ -21,6 +21,7 @@
   padding: 1em;
   box-shadow: none;
   text-shadow: none;
+
 }
 @media (min-width: 43.75em) {
   .highlight-modal {
@@ -33,24 +34,66 @@
   color: $color__blue;
 }
 
+.highlight-modal img {
+  height: 150px;
+  width: 280px;
+}
 .highlight-modal__overlay {
+  align-self: center;
   background: #F9AC31;
   bottom: 0;
-  left: 0;
   position: fixed;
-  right: 0;
   text-align: center;
   text-shadow: none;
   top: 0;
   z-index: 600;
+  width: 90%;
+  overflow: scroll;
 }
 
 .highlight-modal__wrap {
+  display: block;
   padding: 1em 0;
   position: relative;
-  margin-top: 20%
+  margin-top: 20%;
   //max-width: 500px;
   //width: 90%;
+  overflow: scroll;
+  width: 100%;
+  height: 100%;
+}
+
+.icons-list li {
+  display: inline;
+  margin-right: 20px;
+}
+
+.icon-size {
+  display:inline-block;
+  background-color: #ffffff;
+  color: #F9AC31;
+  font-size: 50px;
+  line-height: 100px;
+  border: 7px solid #FFFFFF;
+  border-radius: 50%;
+  width: 100px;
+  height: 100px;
+
+  /*font-size: 32px;
+  line-height: 67px;
+  border: 5px solid #FFFFFF;
+  border-radius: 60%;
+  width: 60px;
+  height: 69px; */
+
+
+  text-align: center;
+  vertical-align: bottom;
+}
+
+.icon-size:hover {
+  box-shadow: none;
+  text-shadow: none;
 }
 
 @media (min-width: 50em) {
@@ -64,6 +107,7 @@
     position: absolute;
     top: 50%;
     transform: translate(-50%, -80%);
+    width: 100%;
   }
 }
 .highlight-modal__wrap label {
@@ -111,9 +155,14 @@
 
 .highlight-modal input:checked ~ .highlight-modal__overlay {
   opacity: 1;
-  transform: scale(1);
+//  transform: scale(1);
   z-index: 800;
 }
+.icons-list li {
+  display: inline;
+  margin-right: 20px;
+}
+
 
 .highlight-modal__trigger {
     // position: absolute;
