--- a/themes/bix/style.css
+++ b/themes/bix/style.css
@@ -3040,16 +3040,15 @@ strong {
 .social-media-modal__overlay {
   background: #F9AC31;
   bottom: 0;
-  left: 0;
+  top: 0;
   position: fixed;
-  right: 0;
   text-align: center;
   text-shadow: none;
-  top: 0;
-  z-index: 600; }
+  z-index: 600;
+  width: 60%; }
 
 .social-media-modal__wrap {
-  padding: 1em 0;
+  padding: .5em;
   position: relative;
   margin: 20px auto;
   max-width: 500px;
@@ -3057,7 +3056,7 @@ strong {
 
 @media (min-width: 50em) {
   .social-media-modal__wrap {
-    padding: 1.75em; } }
+    padding: .75em; } }
 
 @media (min-height: 37.5em) {
   .social-media-modal__wrap {
@@ -3163,21 +3162,58 @@ strong {
   padding: 0 20px;
   color: #70b3cb; }
 
+.highlight-modal img {
+  height: 150px;
+  width: 280px; }
+
 .highlight-modal__overlay {
+  -ms-flex-item-align: center;
+      align-self: center;
   background: #F9AC31;
   bottom: 0;
-  left: 0;
   position: fixed;
-  right: 0;
   text-align: center;
   text-shadow: none;
   top: 0;
-  z-index: 600; }
+  z-index: 600;
+  width: 90%;
+  overflow: scroll; }
 
 .highlight-modal__wrap {
+  display: block;
   padding: 1em 0;
   position: relative;
-  margin-top: 20%; }
+  margin-top: 20%;
+  overflow: scroll;
+  width: 100%;
+  height: 100%; }
+
+.icons-list li {
+  display: inline;
+  margin-right: 20px; }
+
+.icon-size {
+  display: inline-block;
+  background-color: #ffffff;
+  color: #F9AC31;
+  font-size: 50px;
+  line-height: 100px;
+  border: 7px solid #FFFFFF;
+  border-radius: 50%;
+  width: 100px;
+  height: 100px;
+  /*font-size: 32px;
+  line-height: 67px;
+  border: 5px solid #FFFFFF;
+  border-radius: 60%;
+  width: 60px;
+  height: 69px; */
+  text-align: center;
+  vertical-align: bottom; }
+
+.icon-size:hover {
+  box-shadow: none;
+  text-shadow: none; }
 
 @media (min-width: 50em) {
   .highlight-modal__wrap {
@@ -3188,7 +3224,8 @@ strong {
     left: 50%;
     position: absolute;
     top: 50%;
-    transform: translate(-50%, -80%); } }
+    transform: translate(-50%, -80%);
+    width: 100%; } }
 
 .highlight-modal__wrap label {
   background: #F9AC31;
@@ -3232,8 +3269,11 @@ strong {
 
 .highlight-modal input:checked ~ .highlight-modal__overlay {
   opacity: 1;
-  transform: scale(1);
   z-index: 800; }
+
+.icons-list li {
+  display: inline;
+  margin-right: 20px; }
 
 .highlight-modal__trigger {
   display: none; }
