--- a/themes/bix/sass/style.scss
+++ b/themes/bix/sass/style.scss
@@ -76,3 +76,4 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 @import "front-sections/front-model";
 @import "social-media-modal";
 @import "highlight-modal";
+@import "error-page";
