--- a/themes/bix/style.css
+++ b/themes/bix/style.css
@@ -3298,3 +3298,12 @@ strong {
   background-color: #ffffff;
   border: solid #70b3cb 2px;
   color: #70b3cb; }
+
+/*--------------------------------------------------------------
+# 404 page
+--------------------------------------------------------------*/
+.error-404 {
+  width: 100%;
+  padding: 3rem 4rem;
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  margin: 4rem auto; }
