--- a/themes/bix/style.css
+++ b/themes/bix/style.css
@@ -2466,14 +2466,19 @@ strong {
     position: absolute;
     top: 50px;
     left: -45px; }
+  .stories-main a {
+    text-decoration: none;
+    color: #444444; }
   .stories-main .story-number {
     position: absolute;
     top: 46px;
     left: 50px;
     text-transform: uppercase; }
+    .stories-main .story-number span {
+      font-weight: 300; }
   .stories-main .entry-content {
     position: absolute;
-    padding: 0 40px;
+    padding: 10px 40px;
     bottom: 0;
     width: 100%;
     height: auto;
@@ -2483,21 +2488,29 @@ strong {
     color: #fff;
     font-weight: 300; }
     .stories-main .entry-content .btn-stories {
+      color: #fff;
       text-decoration: none;
-      background-color: transparent;
+      border: solid #fff 2px;
       border-radius: 30px;
-      color: white;
-      border: solid white 2px;
-      padding: 10px 20px;
+      background-color: #70b3cb;
       font-weight: 500;
       font-size: 1.1rem;
-      background-color: #70b3cb;
+      text-decoration: none;
+      background-color: transparent;
+      padding: 10px 20px;
+      font-size: 1.1rem;
       opacity: 1;
       transition: opacity .3s ease;
-      width: 80%;
-      display: inline-block; }
-    .stories-main .entry-content p:nth-child(3) {
-      text-align: center; }
+      width: 200px;
+      display: block;
+      text-align: center;
+      margin: 0 auto; }
+      .stories-main .entry-content .btn-stories:hover {
+        color: #70b3cb;
+        border: solid #70b3cb 2px;
+        background-color: #fff; }
+    .stories-main .entry-content p {
+      font-weight: 300; }
   .stories-main .stories-title a {
     text-decoration: none;
     color: #fff;
@@ -2534,7 +2547,7 @@ strong {
       color: #fff;
       border-bottom: solid 2px #fff;
       border-top: solid 2px #fff;
-      font-size: 1.5rem;
+      font-size: 2rem;
       padding: 10px 0;
       width: 250px;
       text-transform: capitalize;
@@ -2547,6 +2560,11 @@ strong {
     opacity: 0; }
     .stories-main .entry-content .btn-stories {
       opacity: 0; }
+  .stories-main a {
+    font-size: 1.5rem; }
+  .stories-main .story-number {
+    top: 42px;
+    left: 28px; }
   .stories-main:hover .entry-content {
     opacity: 1; }
     .stories-main:hover .entry-content .btn {
