--- a/themes/bix/sass/style.scss
+++ b/themes/bix/sass/style.scss
@@ -74,6 +74,6 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 @import "footer";
 @import "media-queries";
 @import "front-sections/front-model";
-@import "social-media-modal";
-@import "highlight-modal";
 @import "error-page";
+@import "thank-you-modal";
+@import "highlight-modal";
