--- a/themes/bix/sass/_error-page.scss
+++ b/themes/bix/sass/_error-page.scss
@@ -3,8 +3,17 @@
 --------------------------------------------------------------*/
 
 .error-404 {
-	width: 100%;
+	width: 80%;
 	padding: 3rem 4rem;
 	border: 1px solid rgba(0,0,0,0.3);
 	margin: 4rem auto;
+	span{
+		color: $color__orange;
+	}
+}
+
+.btn-return{
+	@include btn;
+	padding: 10px 20px;
+	text-transform: uppercase;
 }
