--- a/themes/bix/sass/front-sections/_front-section-two.scss
+++ b/themes/bix/sass/front-sections/_front-section-two.scss
@@ -2,14 +2,14 @@
 .quote-wrapper-front,.quote-wrapper-front-2{
   height: auto; 
   .quote-img{
-    background: url(../../images/bix-homepage-ocean.png) no-repeat center top;
+    background: url(../../images/bix-homepage-ocean-sm.jpg) no-repeat center top;
     background-size: cover;
     height: 250px;
     overflow: hidden;
     position: relative;
   }
   .quote-img-2 {
-   background: url(../../images/bix-homepage-business.png) no-repeat center top;
+   background: url(../../images/bix-homepage-business-sm.jpg) no-repeat center top;
     background-size: cover;
     height: 250px;
     overflow: hidden;
